--- a/custom.css
+++ b/custom.css
@@ -6,3 +6,11 @@
 	margin: 0 auto;
 	width: 100%;
 }
+
+.ui{
+	position: absolute;
+	margin: 0 auto;
+	bottom: 0px;
+	z-index: 2;
+	background-color: hsla(0,100%,100%,0.5);
+}
