--- a/custom.css
+++ b/custom.css
@@ -3,14 +3,19 @@
 	border-width: thin;
 	border-color: hsla(0,0%,70%,1.0);*/
 	display: block;
+	position: absolute;
 	margin: 0 auto;
 	width: 100%;
+	z-index: -1;
 }
 
 .ui{
-	position: absolute;
-	margin: 0 auto;
-	bottom: 0px;
 	z-index: 2;
-	background-color: hsla(0,100%,100%,0.5);
+	background-color: hsla(0,100%,100%,1);
+	border-color: hsla(0,100%,0%,1);
+	border-top: solid;
+	border-width: 5px;
+	padding: 20px;
+	position: fixed;
+	bottom: 0px;
 }
