--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,6 @@
 #canvas01 {
-	/*border-style: solid;
-	border-width: thin;
-	border-color: hsla(0,0%,70%,1.0);*/
 	display: block;
-	position: absolute;
+	position: relative;
 	margin: 0 auto;
 	width: 100%;
 	z-index: -1;
