--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,9 @@
 #canvas01 {
+	/*border-style: solid;
+	border-width: thin;
+	border-color: hsla(0,0%,70%,1.0);*/
 	display: block;
-	position: relative;
+	position: absolute;
 	margin: 0 auto;
 	width: 100%;
 	z-index: -1;
