--- a/custom.css
+++ b/custom.css
@@ -3,10 +3,9 @@
 	border-width: thin;
 	border-color: hsla(0,0%,70%,1.0);*/
 	display: block;
-	position: absolute;
+	position: inherit;
 	margin: 0 auto;
-	width: 100%;
-	z-index: -1;
+	/*z-index: 1;*/
 }
 
 .ui{
@@ -22,4 +21,73 @@
 
 body {
     overflow:hidden;
+}
+
+.canvascontainer-border {
+	border-color: hsla(0,100%,50%,1);
+	border-width: thin;
+}
+
+.canvascontainer-border:hover {
+	border-color: hsla(0,100%,50%,1);
+	
+}
+
+.test {
+
+}
+
+.circleDiv {
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	border-radius: 50%;
+	position: relative;
+	border-style: solid;
+	border-width: thin;
+	border-color: hsla(0,100%,0%,0.0);
+	margin-bottom: 25px;
+}
+
+.circleDiv:before{
+    content: "";
+    display: block;
+    padding-top: 100%;  /* initial ratio of 1:1*/
+}
+
+.circleDiv:hover {
+	border-color: hsla(0,100%,0%,0.1);
+}
+
+.circleDiv:active {
+	border-color: hsla(0,100%,0%,0.5);
+}
+
+.circleDiv img {
+	z-index: -1;
+}
+
+.knob {
+	width: 80px;
+	height: 80px;
+}
+
+.header {
+}
+
+.margin-bottom-50px {
+	margin-bottom: 50px; 
+}
+
+.margin-bottom-30px {
+	margin-bottom: 0px; 
+}
+
+
+
+.logo img {
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	height: auto;
 }
