--- a/custom.css
+++ b/custom.css
@@ -40,9 +40,10 @@ body {
 .circleDiv {
 	margin-left: auto;
 	margin-right: auto;
-	padding-right: 1%;
-	padding-left: 1%;
-	width: 22%;
+	padding-right: 5px;
+	padding-left: 5px;
+	width: 80px;
+	height: 80px;
 	border-radius: 50%;
 	position: relative;
 	border-style: solid;
