--- a/custom.css
+++ b/custom.css
@@ -87,6 +87,10 @@ body {
 	margin-bottom: 30px; 
 }
 
+.margin-bottom-10px {
+	margin-bottom: 10px; 
+}
+
 .logo img {
 	margin-left: auto;
 	margin-right: auto;
