--- a/custom.css
+++ b/custom.css
@@ -8,6 +8,9 @@
 	/*z-index: 1;*/
 }
 
+.knob {
+}
+
 .ui{
 	z-index: 2;
 	background-color: hsla(0,100%,100%,1);
@@ -45,7 +48,7 @@ body {
 	position: relative;
 	border-style: solid;
 	border-width: thin;
-	border-color: hsla(0,100%,0%,0.0);
+	border-color: hsla(0,100%,0%,0.3);
 	margin-bottom: 25px;
 }
 
@@ -56,7 +59,7 @@ body {
 }
 
 .circleDiv:hover {
-	border-color: hsla(0,100%,0%,0.3);
+	border-color: hsla(0,100%,0%,0.5);
 }
 
 .circleDiv:active {
