--- a/css/custom.css
+++ b/css/custom.css
@@ -1,26 +1,26 @@
 #canvas01 {
 	/*border-style: solid;
 	border-width: thin;
-	border-color: hsla(0,0%,70%,1.0);*/
+	border-color: hsla(0,0%,70%,1.0);
 	display: block;
 	position: inherit;
 	margin: 0 auto;
-	/*z-index: 1;*/
+	z-index: 1;*/
 }
 
 .ui{
-	z-index: 2;
+	/* z-index: 2;
 	background-color: hsla(0,100%,100%,1);
 	border-color: hsla(0,100%,0%,1);
 	border-top: solid;
 	border-width: 5px;
 	padding: 20px;
 	position: fixed;
-	bottom: 0px;
+	bottom: 0px; */
 }
 
 body {
-    overflow:hidden;
+    /* overflow:hidden; */
 }
 
 .canvascontainer-border {
@@ -33,20 +33,10 @@ body {
 	
 }
 
-.test {
-
-}
-
 .circleDiv {
 	margin-left: auto;
 	margin-right: auto;
-	width: 40%;
-	border-radius: 50%;
-	position: relative;
-	border-style: solid;
-	border-width: thin;
-	border-color: hsla(0,100%,0%,0.0);
-	margin-bottom: 25px;
+	width: 100%;
 }
 
 .circleDiv:before{
@@ -56,7 +46,7 @@ body {
 }
 
 .circleDiv:hover {
-	border-color: hsla(0,100%,0%,0.3);
+	border-color: hsla(0,100%,0%,0.5);
 }
 
 .circleDiv:active {
@@ -65,36 +55,4 @@ body {
 
 .circleDiv img {
 	z-index: -1;
-}
-
-.knob {
-	width: 80px;
-	height: 80px;
-}
-
-.header {
-}
-
-.margin-bottom-100px {
-	margin-bottom: 100px; 
-}
-
-.margin-bottom-50px {
-	margin-bottom: 50px; 
-}
-
-.margin-bottom-30px {
-	margin-bottom: 30px; 
-}
-
-.logo img {
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-	height: auto;
-}
-
-.align-bottom {
-	display: table-cell;
-	vertical-align: bottom;
 }
